# RPRT

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  Cargo.toml  README.md
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: health.rs  mod.rs
frontend/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  health.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/features/health/: HealthCheck.test.tsx  HealthCheck.tsx
frontend/src/providers/: AppProviders.tsx
frontend/src/test/: setup.ts
scripts/: PRD.txt  task-complexity-report.json
